cabal-version: 1.12
name:           apie
version:        0.1.0.8
description:    Please see the README on GitHub at <https://github.com/mjepronk/apie#readme>
homepage:       https://github.com/mjepronk/apie#readme
bug-reports:    https://github.com/mjepronk/apie/issues
author:         Matthias Pronk
maintainer:     matthias@remakingthe.world
copyright:      2020 Matthias Pronk
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/mjepronk/apie

library
  exposed-modules:
      Apie
    , Apie.ContentStore
    , Apie.EventLog
    , Apie.HKD
    , Apie.Diff
  other-modules:
      Paths_apie
    , Apie.Diff.GDiffable
    , Apie.Diff.GParseJSON
    , Apie.Diff.GToJSON
    , Apie.Diff.Types
    , Apie.Internal.Auth
    , Apie.Internal.Config
    , Apie.Internal.Env
    , Apie.Internal.FileMode
    , Apie.Internal.ISODateTime
    , Apie.Internal.Log
    , Apie.Internal.Store
    , Apie.Internal.User
    , Apie.Internal.Utils
    , Apie.App
    , Apie.Info
    , Apie.User
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , aeson
    , rio
    , cryptonite
    , filelock
    , http-types
    , unix
    , uuid
    , unordered-containers
    , wai
    , wai-extra
  default-extensions:
      NoImplicitPrelude
    , NamedFieldPuns
    , OverloadedStrings
    , TupleSections
    , DeriveFunctor
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -Werror

executable apie-cgi
  main-is: CGI.hs
  other-modules:
      Paths_apie
  hs-source-dirs:
      app
  build-depends:
      base >=4.7 && <5
    , rio
    , wai-extra
    , apie
  default-extensions:
      NoImplicitPrelude
    , NamedFieldPuns
    , OverloadedStrings
    , TupleSections
    , DeriveFunctor
  default-language: Haskell2010

executable apie-server
  main-is: Server.hs
  other-modules:
      Paths_apie
  hs-source-dirs:
      app
  build-depends:
      base >=4.7 && <5
    , rio
    , warp
    , apie
  default-extensions:
      NoImplicitPrelude
    , NamedFieldPuns
    , OverloadedStrings
    , TupleSections
  default-language: Haskell2010

test-suite apie-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_apie
    , DiffSpec
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , apie
    , hspec
    , rio
    , aeson
    , unordered-containers
    , uuid
  default-extensions:
      NoImplicitPrelude
    , NamedFieldPuns
    , OverloadedStrings
    , OverloadedLists
    , TupleSections
  default-language: Haskell2010
